# COMP3023-Assignment1

./: COMP2019_Week_1_Test_Notebook.ipynb  System Design.docx
COMP3023-Assignment1/: CMakeLists.txt
COMP3023-Assignment1/COMP3023-Assignment1/: AbstractItem.cpp  AbstractItem.h  CMakeLists.txt  COMP3023-Assignment1.cpp  COMP3023-Assignment1.h  Flashlight.cpp  Game.cpp  Game.h  Multi.cpp  Multi.h  main.cpp
COMP3023-Assignment1/Comp3023Assignment1/: AbstractItem.cpp  AbstractItem.h  AbstractMoon.cpp  AbstractMoon.h  April.cpp  April.h  Backpack.cpp  Backpack.h  CMakeLists.txt  Comp3023Assignment1.cpp  Comp3023Assignment1.h  Corporation.cpp  Corporation.h  Defence.cpp  Defence.h  Flashlight.cpp  Flashlight.h  Game.cpp  Game.h  HydraulicsMK2.cpp  HydraulicsMK2.h  Hyperion.cpp  Hyperion.h  Insurance.cpp  Insurance.h  InverseTeleporter.cpp  InverseTeleporter.h  ItemManager.cpp  ItemManager.h  MoonManager.cpp  MoonManager.h  Multi.cpp  Multi.h  Pledge.cpp  Pledge.h  ProFlashlight.cpp  ProFlashlight.h  Prototyping.cpp  Prototyping.h  Shovel.cpp  (+6 more)
